# citationberg.js

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  citationberg.patch  js.patch  just  package-lock.json  package.json  pkg.patch
src/: affixes.rs  base_language.rs  bibliography.rs  choose.rs  choose_branch.rs  choose_match.rs  citation.rs  csl_macro.rs  date.rs  date_part.rs  dependent_style.rs  else_branch.rs  et_al.rs  formatting.rs  group.rs  independent_style.rs  independent_style_settings.rs  info_link.rs  inheritable_name_options.rs  label.rs  layout.rs  layout_rendering_element.rs  lib.rs  license.rs  local_string.rs  locale.rs  locale_code.rs  locale_file.rs  locale_info.rs  second_field_align.rs  sort.rs  sort_direction.rs  sort_key.rs  subsequent_author_substitute_rule.rs  test_position.rs  text.rs  text_target.rs
src/macros/: mod.rs  my_parallel_enum.rs
src/taxonomy/: date_variable.rs  kind.rs  locator.rs  mod.rs  name_variable.rs  number_variable.rs  other_term.rs  standard_variable.rs  term.rs  term_conversion_error.rs  variable.rs
test/: index.test.js
tests/: index.test.js  taxonomy.test.js
wit/: world.wit
