[package]
name = "citationberg"
description = "🦀 typst/citationberg for JavaScript"
version = "0.0.1+0.1.1"
authors = ["Jacob Hummer <jcbhmr@outlook.com>"]
license = "MIT"
repository = "https://github.com/typst-community/citationberg.js.git"
homepage = "https://tsdocs.dev/docs/citationberg"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.89"
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.66", features = ["console"] }
js-sys = "0.3.66"
citationberg-rs = { package = "citationberg", version = "0.1.1" }
