[package]
name = "citationberg"
description = "🦀 typst/citationberg WASM component"
version = "0.0.1+0.1.1"
authors = ["Jacob Hummer <jcbhmr@outlook.com>"]
license = "MIT"
repository = "https://github.com/typst-community/citationberg.wasm.git"
homepage = "https://tsdocs.dev/docs/citationberg"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = "0.6.0"
citationberg-rs = { package = "citationberg", version = "0.1.1" }
derive_more = "0.99.17"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "typst-community:citationberg"

[package.metadata.component.dependencies]
