[package]
name = "citationberg-js"
version = "0.0.1+0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["start"]
start = []

[dependencies]
citationberg = "0.1.1"
delegate = "0.12.0"
derive_more = "0.99.17"
wasm-bindgen = "0.2.84"

[profile.release]
opt-level = "s"
